--- a/calculating gstar (gstar and density function).ipynb
+++ b/calculating gstar (gstar and density function).ipynb
@@ -23,13 +23,13 @@
     "\n",
     "First there is a list of all the particles that have masses below $1$ GeV. The fermion and boson matrices categorize these particles by type as well as saving their $g$ value. Then there are integrands for fermions/bosons for $g_*$ and for $g_{*s}$\n",
     "\n",
-    "Next is calculating $g_*$:\n",
+    "Functions for calculating $g_*$:\n",
     "\n",
     "- $\\bf{rho}$ calculates the energy density of particles with mass $m$ and value $g$\n",
     "- $\\bf{density}$ calculates the energy density for all of the particles in the fermion and boson matrices\n",
     "- $\\bf{gstar}$ calculates $g_*$ lol obviously\n",
     "\n",
-    "Next is calculating $g_{*s}$:\n",
+    "Functions for calculating $g_{*s}$:\n",
     "\n",
     "- $\\bf{P}$ calculates the pressure given mass $m$ and value $g$\n",
     "- $\\bf{pressure}$ calculates the pressure for all of the particles in the fermion and boson matrices\n",
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "5bd99b2e",
+   "id": "dec26916",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad3d6a35",
+   "id": "01435350",
    "metadata": {},
    "source": [
     "# Calculate $g_{*}$"
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "6de7f9ee",
+   "id": "9f2c36ca",
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "034b7dc1",
+   "id": "c8c73d46",
    "metadata": {},
    "source": [
     "# Calculate $g_{*s}$"
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "d0fac6cd",
+   "id": "3cc92ac1",
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "20675f64",
+   "id": "7d191409",
    "metadata": {},
    "outputs": [
     {
