changed function names

--- a/calculating gstar (gstar and density function).ipynb
+++ b/calculating gstar (gstar and density function).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "id": "8a8feda1",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "id": "dec26916",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "id": "9f2c36ca",
    "metadata": {},
    "outputs": [
@@ -113,7 +113,7 @@
     "    return np.sum(rho_vals)\n",
     "\n",
     "@nb.jit(nopython=True)\n",
-    "def density(T, mass_gf, mass_gb):\n",
+    "def energy_density(T, mass_gf, mass_gb):\n",
     "    density_val_f = 0 \n",
     "    density_val_b = 0 \n",
     "    for massf, gf in mass_gf:\n",
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "id": "3cc92ac1",
    "metadata": {},
    "outputs": [
@@ -221,7 +221,7 @@
     "    return p_vals_f + p_vals_b\n",
     "\n",
     "@nb.jit(nopython=True)\n",
-    "def entropy(T, mass_gf, mass_gb):\n",
+    "def entropy_density(T, mass_gf, mass_gb):\n",
     "    S = (1/T)*(density(T, mass_gf, mass_gb) + pressure(T, mass_gf, mass_gb))\n",
     "    return S\n",
     "    \n",
