--- a/blah.ipynb
+++ b/blah.ipynb
@@ -10,9 +10,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Opening data file in RRR, 78\n",
-      "Opening data file in RRR, 78\n",
-      "in NNN, ABC = 56.10503329522573\n"
+      "Opening data file in RRR, 23\n",
+      "Opening data file in RRR, 23\n",
+      "in NNN, ABC = 9.941898256564475\n",
+      "Opening data file in RRR, 23\n"
      ]
     }
    ],
@@ -33,7 +34,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data file saved with index =  22\n"
+      "Data file saved with index =  88\n"
      ]
     }
    ],
@@ -53,10 +54,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "56.10503329522573\n",
-      "[78.19906743 77.97910631 77.97196089 77.98895634 78.15364313]\n",
-      "[690.63546354 688.69281953 688.62971288 688.77981258 690.23428694]\n",
-      "78.00000000000001\n"
+      "9.941898256564475\n",
+      "[22.97152386 23.01418715 23.02031977 23.09240758 23.03188657]\n",
+      "[110.16755827 110.37216423 110.40157522 110.74729623 110.45704766]\n",
+      "22.999999999999996\n"
      ]
     }
    ],
@@ -77,8 +78,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Opening data file in RRR, 22\n",
-      "in NNN, ABC = 8.314707840139851\n"
+      "Opening data file in RRR, 88\n",
+      "in NNN, ABC = 68.08536056015319\n"
      ]
     },
     {
@@ -106,10 +107,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8.314707840139851\n",
-      "[22.07267129 22.01279833 21.83302138 22.04644272 22.11258533]\n",
-      "[103.53000528 103.24917621 102.40594755 103.40698237 103.71721873]\n",
-      "22.0\n"
+      "68.08536056015319\n",
+      "[88.2080625  88.05799631 88.02305143 87.95077459 87.99911948]\n",
+      "[827.46497297 826.05722738 825.72941531 825.05139841 825.50491373]\n",
+      "88.0\n"
      ]
     }
    ],
