--- a/blah.ipynb
+++ b/blah.ipynb
@@ -10,10 +10,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Opening data file in RRR, 23\n",
-      "Opening data file in RRR, 23\n",
-      "in NNN, ABC = 9.941898256564475\n",
-      "Opening data file in RRR, 23\n"
+      "Opening data file in RRR, index=95\n",
+      "Opening data file in RRR, index=95\n",
+      "import EEE\n",
+      "Opening data file in RRR, index=95\n",
+      "Opening data file in RRR, index=95\n",
+      "import EEE\n",
+      "NNN loaded with ABC = 92.10463670001928\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import NNN\n",
+    "import EEE\n",
+    "import importlib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "671efc53",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -34,52 +59,49 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data file saved with index =  88\n"
+      "Data file saved with index =  38\n",
+      "(1)\n",
+      "Called NNN.solve\n",
+      "Called EEE.sp\n",
+      "(75.02965412430157, 75.0)\n",
+      "\n",
+      "(2)\n",
+      "50.55712853561281\n",
+      "\n",
+      "(3)\n",
+      "Called EEE.sp\n",
+      "(75.02965412430157, 75.0)\n"
      ]
     }
    ],
    "source": [
     "index = np.random.randint(100)\n",
     "np.savez(\"blah_data\", i = index, A = index + 0.1*np.random.randn(5), B = -index + 0.1 * np.random.randn(8), C = np.sqrt(index))\n",
-    "print(\"Data file saved with index = \", index)"
+    "print(\"Data file saved with index = \", index)\n",
+    "print(\"(1)\")\n",
+    "print(NNN.solve())\n",
+    "print()\n",
+    "print(\"(2)\")\n",
+    "NNN.print_ABC()\n",
+    "print()\n",
+    "print(\"(3)\")\n",
+    "print(EEE.sp())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9158eb4b",
+   "id": "ae47e053",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9.941898256564475\n",
-      "[22.97152386 23.01418715 23.02031977 23.09240758 23.03188657]\n",
-      "[110.16755827 110.37216423 110.40157522 110.74729623 110.45704766]\n",
-      "22.999999999999996\n"
-     ]
-    }
-   ],
-   "source": [
-    "NNN.print_ABC()\n",
-    "EEE.print_A()\n",
-    "EEE.print_AC()\n",
-    "EEE.print_index()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "720e2709",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Opening data file in RRR, 88\n",
-      "in NNN, ABC = 68.08536056015319\n"
+      "Opening data file in RRR, index=38\n",
+      "Opening data file in RRR, index=38\n",
+      "import EEE\n",
+      "NNN loaded with ABC = 23.531009735235592\n"
      ]
     },
     {
@@ -88,7 +110,7 @@
        "<module 'NNN' from '/Users/ckishimoto/Desktop/git/new_QCD/NNN.py'>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,35 +121,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "90e660af",
+   "execution_count": 4,
+   "id": "927a867b",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "68.08536056015319\n",
-      "[88.2080625  88.05799631 88.02305143 87.95077459 87.99911948]\n",
-      "[827.46497297 826.05722738 825.72941531 825.05139841 825.50491373]\n",
-      "88.0\n"
+      "(1)\n",
+      "Called NNN.solve\n",
+      "Called EEE.sp\n",
+      "(37.998814619796555, 38.0)\n",
+      "\n",
+      "(2)\n",
+      "23.531009735235592\n",
+      "\n",
+      "(3)\n",
+      "Called EEE.sp\n",
+      "(37.998814619796555, 38.0)\n"
      ]
     }
    ],
    "source": [
+    "print(\"(1)\")\n",
+    "print(NNN.solve())\n",
+    "print()\n",
+    "print(\"(2)\")\n",
     "NNN.print_ABC()\n",
-    "EEE.print_A()\n",
-    "EEE.print_AC()\n",
-    "EEE.print_index()"
+    "print()\n",
+    "print(\"(3)\")\n",
+    "print(EEE.sp())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "696bee88",
+   "execution_count": 6,
+   "id": "8b10eedc",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data file saved with index =  95\n",
+      "\n",
+      "Opening data file in RRR, index=95\n",
+      "Opening data file in RRR, index=95\n",
+      "import EEE\n",
+      "NNN loaded with ABC = 92.10463670001928\n",
+      "\n",
+      "(1)\n",
+      "Called NNN.solve\n",
+      "Called EEE.sp\n",
+      "(94.99720807505847, 95.0)\n",
+      "\n",
+      "(2)\n",
+      "92.10463670001928\n",
+      "\n",
+      "(3)\n",
+      "Called EEE.sp\n",
+      "(94.99720807505847, 95.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "index = np.random.randint(100)\n",
+    "np.savez(\"blah_data\", i = index, A = index + 0.1*np.random.randn(5), B = -index + 0.1 * np.random.randn(8), C = np.sqrt(index))\n",
+    "print(\"Data file saved with index = \", index)\n",
+    "print()\n",
+    "importlib.reload(NNN)\n",
+    "print()\n",
+    "print(\"(1)\")\n",
+    "print(NNN.solve())\n",
+    "print()\n",
+    "print(\"(2)\")\n",
+    "NNN.print_ABC()\n",
+    "print()\n",
+    "print(\"(3)\")\n",
+    "print(EEE.sp())"
+   ]
   }
  ],
  "metadata": {
