changed array name

--- a/calculating gstar (gstar and density function).ipynb
+++ b/calculating gstar (gstar and density function).ipynb
@@ -153,14 +153,14 @@
    "source": [
     "T = np.loadtxt(\"SMgstar.dat\", usecols = 0, unpack = True)\n",
     "gstar_old = np.loadtxt(\"SMgstar.dat\", usecols = 1, unpack = True)\n",
-    "gstar_plot_vals = np.zeros(len(T))\n",
+    "gstar_vals = np.zeros(len(T))\n",
     "\n",
     "for i in range(len(T)):\n",
-    "    gstar_plot_vals[i] = gstar(T[i], fermions, bosons)\n",
+    "    gstar_vals[i] = gstar(T[i], fermions, bosons)\n",
     "\n",
     "\n",
     "plt.figure()\n",
-    "plt.loglog(T, gstar_plot_vals)\n",
+    "plt.loglog(T, gstar_vals)\n",
     "plt.loglog(T, gstar_old)\n",
     "plt.xlim(1e5,1e-2)\n",
     "plt.ylabel('g_star')\n",
@@ -256,16 +256,16 @@
    "source": [
     "T = np.loadtxt(\"SMgstar.dat\", usecols = 0, unpack = True)\n",
     "gstarS_old = np.loadtxt(\"SMgstar.dat\", usecols = 2, unpack = True)\n",
-    "gstarS_plot_vals = np.zeros(len(T))\n",
+    "gstarS_vals = np.zeros(len(T))\n",
     "\n",
     "for i in range(len(T)):\n",
-    "    gstarS_plot_vals[i] = gstarS(T[i], fermions, bosons)\n",
+    "    gstarS_vals[i] = gstarS(T[i], fermions, bosons)\n",
     "\n",
     "\n",
     "plt.figure()\n",
-    "plt.loglog(T, gstarS_plot_vals)\n",
+    "plt.loglog(T, gstarS_vals)\n",
     "plt.loglog(T, gstarS_old)\n",
-    "plt.loglog(T, gstar_plot_vals, linestyle = '--' )\n",
+    "plt.loglog(T, gstar_vals, linestyle = '--' )\n",
     "plt.loglog(T, gstar_old, linestyle = '--')\n",
     "plt.xlim(1e5,1e-2)\n",
     "plt.ylabel('g_star')\n",
@@ -289,7 +289,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "spline_gstar.save_spline_params(T, gstar_plot_vals, gstarS_plot_vals, npz_file_name = \"Relativistic_Degrees_of_Freedom.npz\")\n"
+    "spline_gstar.save_spline_params(T, gstar_vals, gstarS_vals, npz_file_name = \"Relativistic_Degrees_of_Freedom.npz\")\n"
    ]
   },
   {
