--- a/test reload.ipynb
+++ b/test reload.ipynb
@@ -2,23 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "b2b3624d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Opening data file in RRR, index=87\n",
-      "Opening data file in RRR, index=87\n",
-      "import Emma3\n",
-      "Opening data file in RRR, index=87\n",
-      "Opening data file in RRR, index=87\n",
-      "import Emma3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import Num_SH_fast\n",
@@ -29,67 +16,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "5d74ecc5",
+   "execution_count": 16,
+   "id": "9d289de2",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "import Emma3\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "0.0965693677015745"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "importlib.reload(Emma3)\n",
     "mixing = 5.33e-10\n",
     "L0 = 0.0012\n",
-    "Emma3.sterile_production(1000, 0.0071, mixing, mixing, mixing, L0, L0, L0, make_plot=False, folder_name=\"3to1 model\", file_prefix=\"final3to1\")\n"
+    "Emma3.sterile_production(1000, 0.0071, mixing, mixing, mixing, L0, L0, L0, make_plot=False, folder_name=\"3to1 model\", file_prefix=\"final3to1\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "31d9fc32",
+   "execution_count": 17,
+   "id": "9301f12f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['T',\n",
-       " 'final_distribution',\n",
-       " 'epsilon',\n",
-       " 'lep_evo_e',\n",
-       " 'lep_evo_mu',\n",
-       " 'lep_evo_tau',\n",
-       " 'a',\n",
-       " 't',\n",
-       " 'sterile_evo',\n",
-       " 'anti_sterile_evo',\n",
-       " 'mass_s',\n",
-       " 'mixangv_tot',\n",
-       " 'Le0',\n",
-       " 'Lmu0',\n",
-       " 'Ltau0',\n",
-       " 'mixangv_e',\n",
-       " 'mixangv_mu',\n",
-       " 'mixangv_tau',\n",
-       " 'omega_h2',\n",
-       " 'total_entropy']"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "data = np.load('3to1 model/final3to1x1.20e-03x2.10e-09.npz') \n",
-    "data.files\n",
-    "#print (data['total_'])"
+    "data = np.load('3to1 model/final3to1x1.20e-03x2.10e-09.npz') "
    ]
   },
   {
