fixed issue with parallel scattering

--- a/Fixed Scattering MultiParallel Run.ipynb
+++ b/Fixed Scattering MultiParallel Run.ipynb
@@ -1,22 +1,24 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "9287210b",
-   "metadata": {},
-   "source": [
-    "To use this, change ``TQ`` and ``sm``, to create **strings** that represent the QCD transition temperature and the multiplicative factor for all scattering rates."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "acc4394b",
+   "id": "dba9544c",
    "metadata": {},
    "outputs": [],
    "source": [
     "sm = \"2\"\n",
     "TQ_vals = [\"180\", \"360\", \"720\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d3562411",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
    ]
   },
   {
@@ -29,7 +31,13 @@
     "TQ = \"180\"\n",
     "sm = \"2\"\n",
     "QCD_T = float(TQ)\n",
-    "scat_mult = float(sm)"
+    "scat_mult = float(sm)\n",
+    "\n",
+    "e = 1.27\n",
+    "mu = 1.27\n",
+    "tau = 0.92\n",
+    "\n",
+    "np.savez(\"Scatter_Rate_Constants.npz\", e=e*scat_mult, mu=mu*scat_mult, tau=tau*scat_mult)"
    ]
   },
   {
@@ -60,7 +68,6 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
     "import spline_gstar as sg\n",
     "import newQCDtransition as nw\n",
     "import importlib"
@@ -78,14 +85,7 @@
     "\n",
     "T, g, gs = nw.new_gstar(QCD_T, std_absolute_T=False)\n",
     "\n",
-    "sg.save_spline_params(T, g, gs)\n",
-    "\n",
-    "\n",
-    "e = 1.27\n",
-    "mu = 1.27\n",
-    "tau = 0.92\n",
-    "\n",
-    "np.savez(\"Scatter_Rate_Constants.npz\", e=e*scat_mult, mu=mu*scat_mult, tau=tau*scat_mult)"
+    "sg.save_spline_params(T, g, gs)"
    ]
   },
   {
